--- a/.github/workflows/bats.yml
+++ b/.github/workflows/bats.yml
@@ -22,8 +22,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2.4.0
         with:
-          fetch-depth: 0
-      - name: Checkout submodules
-        uses: textbook/git-checkout-submodule-action@2.1.1
+          submodules: recursive
       - name: Run test suite
         run: bash -c 'make tests'
