--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,7 @@
+---
 name: Bug report
 description: File a bug report
-title: "[BUG] "
+title: '[BUG] '
 labels:
   - kind/bug
   - meta/needs triage
@@ -60,7 +61,7 @@ body:
   - type: textarea
     id: what-happens-and-when
     attributes:
-      label:  What happens and when does it happen?
+      label: What happens and when does it happen?
       description: Tell us what is happening and when.
       placeholder: I'm notified that I called `notify` without importing the `logs` module.
       render: Markdown
@@ -70,7 +71,7 @@ body:
   - type: textarea
     id: what-did-you-expect-to-happen
     attributes:
-      label:  What did you expect to happen?
+      label: What did you expect to happen?
       description: Tell us what you expected.
       placeholder: I expected to be able to use `notify`
       render: Markdown
@@ -99,7 +100,6 @@ body:
         Show us relevant log output here. You can enable debug output
         by setting the environment variable `DMS_DEBUG` to `1`.
       render: Shell
-
 
   - type: textarea
     id: other-relevant-information
