--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -38,3 +38,4 @@ jobs:
           VALIDATE_EDITORCONFIG: true
           VALIDATE_GITHUB_ACTIONS: true
           VALIDATE_MARKDOWN: true
+          VALIDATE_YAML: true
