minor generic improvements

--- a/.github/linters/.ecrc
+++ b/.github/linters/.ecrc
@@ -7,8 +7,7 @@
   "Exclude": [
     "\\.bats_.*",
     "^.gitmodules$",
-    "^LICENSE$",
-    "\\.md$"
+    "^LICENSE$"
   ],
   "AllowedContentTypes": [],
   "PassedFiles": [],
