update CI to run BATS properly again

--- a/.github/workflows/bats.yml
+++ b/.github/workflows/bats.yml
@@ -20,4 +20,4 @@ jobs:
         with:
           submodules: recursive
       - name: Run test suite
-        run: bash -c 'make test'
+        run: bash -c 'make ci-bats'
