--- a/.github/workflows/bats.yml
+++ b/.github/workflows/bats.yml
@@ -3,10 +3,6 @@ name: Bash Unit Testing
 
 on: # yamllint disable-line rule:truthy
   workflow_dispatch:
-  pull_request:
-    types:
-      - opened
-      - reopened
   push:
     branches: ['**']
 
@@ -24,4 +20,6 @@ jobs:
         with:
           submodules: recursive
       - name: Run test suite
-        run: bash -c 'make tests'
+        run: bash -c 'make test'
+        env:
+          CI: true
