--- a/.github/workflows/bats.yml
+++ b/.github/workflows/bats.yml
@@ -1,5 +1,5 @@
 ---
-name: Bash Unit Testing
+name: Unit Tests
 
 on: # yamllint disable-line rule:truthy
   workflow_dispatch:
@@ -12,8 +12,8 @@ defaults:
 
 jobs:
   run-unit-tests:
-    name: Run BATS (Bash Automated Testing System)
-    runs-on: ubuntu-20.04
+    name: Run BATS
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.4.0
