--- a/.github/workflows/bats.yml
+++ b/.github/workflows/bats.yml
@@ -5,6 +5,10 @@ on: # yamllint disable-line rule:truthy
   workflow_dispatch:
   push:
     branches: ['**']
+    paths:
+      - modules/**
+      - tests/**
+      - load
 
 defaults:
   run:
