--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -12,7 +12,7 @@ defaults:
 
 jobs:
   lint:
-    name: Lint against GitHub's Super-Linter
+    name: Run GitHub's Super-Linter
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
