--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -23,9 +23,8 @@ jobs:
 
       - name: Run the Linter
         run: |
-          docker run --rm --tty --volume "${GITHUB_WORKSPACE}:${GITHUB_WORKSPACE}:ro" --workdir '${GITHUB_WORKSPACE}' \
-            docker.io/mstruebing/editorconfig-checker:${IMAGE_TAG_EC} \
-            ec -config "${GITHUB_WORKSPACE}/.editorconfig"
+          docker run --rm --tty --volume "${GITHUB_WORKSPACE}:${GITHUB_WORKSPACE}:ro" --workdir "${GITHUB_WORKSPACE}" \
+            "docker.io/mstruebing/editorconfig-checker:${IMAGE_TAG_EC}"
 
   ShellCheck:
     runs-on: ubuntu-20.04
@@ -44,7 +43,7 @@ jobs:
           FILES+=("${GITHUB_WORKSPACE}/load")
 
           docker run --rm --tty --volume "${GITHUB_WORKSPACE}:${GITHUB_WORKSPACE}:ro" --workdir "${GITHUB_WORKSPACE}" \
-            docker.io/koalaman/shellcheck-alpine:${IMAGE_TAG_SHELLCHECK} \
+            "docker.io/koalaman/shellcheck-alpine:${IMAGE_TAG_SHELLCHECK}" \
             shellcheck --source-path=${GITHUB_WORKSPACE} "${FILES[@]}"
 
           unset FILES
@@ -52,5 +51,5 @@ jobs:
             -maxdepth 1 -type f -regextype egrep -iregex '.*\.bats' -print0)
 
           docker run --rm --tty --volume "${GITHUB_WORKSPACE}:${GITHUB_WORKSPACE}:ro" --workdir "${GITHUB_WORKSPACE}" \
-            docker.io/koalaman/shellcheck-alpine:${IMAGE_TAG_SHELLCHECK} \
+            "docker.io/koalaman/shellcheck-alpine:${IMAGE_TAG_SHELLCHECK}" \
             shellcheck --source-path=${GITHUB_WORKSPACE} --exclude=SC2034 "${FILES[@]}"
