remove `make` and replace it with `Just`
CI is now not dependent on `make` anymore..

--- a/.editorconfig
+++ b/.editorconfig
@@ -18,11 +18,8 @@ indent_size          = 2
 tab_width            = 4
 insert_final_newline = true
 
-[Makefile]
+[Justfile]
 indent_style         = tab
-
-[*.{yml,yaml,json,jsonc}]
-indent_style         = space
 
 [*.{sh,bats}]
 shell_variant        = bash
