--- a/.shellcheckrc
+++ b/.shellcheckrc
@@ -2,7 +2,7 @@ shell=bash
 enable=all
 color=auto
 severity=style
-disable=SC2030,SC2031,SC2154,SC2312
+disable=SC2030,SC2031,SC2154,SC2312,SC2329
 external-sources=true
 check-sourced=true
 wiki-link-count=5
