--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,3 +1,4 @@
+---
 name: Linting
 
 on:
@@ -39,18 +40,13 @@ jobs:
         run: |
           set -e -u -o pipefail
 
-          readarray -d '' FILES < <(find "${GITHUB_WORKSPACE}/modules/" \
-            -type f -regextype egrep -iregex '.*\.sh' -print0)
-          FILES+=("${GITHUB_WORKSPACE}/load")
-
-          docker run --rm --tty --volume "${GITHUB_WORKSPACE}:${GITHUB_WORKSPACE}:ro" --workdir "${GITHUB_WORKSPACE}" \
-            "docker.io/koalaman/shellcheck-alpine:${IMAGE_TAG_SHELLCHECK}" \
-            shellcheck --source-path=${GITHUB_WORKSPACE} "${FILES[@]}"
-
-          unset FILES
           readarray -d '' FILES < <(find "${GITHUB_WORKSPACE}/tests/" \
             -maxdepth 1 -type f -regextype egrep -iregex '.*\.bats' -print0)
 
-          docker run --rm --tty --volume "${GITHUB_WORKSPACE}:${GITHUB_WORKSPACE}:ro" --workdir "${GITHUB_WORKSPACE}" \
+          FILES+=("${GITHUB_WORKSPACE}/libbash")
+
+          docker run --rm --tty                                            \
+            --volume "${GITHUB_WORKSPACE}:${GITHUB_WORKSPACE}:ro"          \
+            --workdir "${GITHUB_WORKSPACE}"                                \
             "docker.io/koalaman/shellcheck-alpine:${IMAGE_TAG_SHELLCHECK}" \
-            shellcheck --source-path=${GITHUB_WORKSPACE} --exclude=SC2034 "${FILES[@]}"
+            shellcheck --source-path=${GITHUB_WORKSPACE} "${FILES[@]}"
