ci: praise be linters
Signed-off-by: Georg Lauterbach <44545919+georglauterbach@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,13 +3,13 @@ version: 2
 
 updates:
   - package-ecosystem: github-actions
+    cooldown:
+      default-days: 7
     directory: /
-    target-branch: development
+    target-branch: main
     rebase-strategy: auto
     schedule:
-      interval: weekly
-    reviewers:
-      - georglauterbach
+      interval: monthly
     assignees:
       - georglauterbach
     labels:
