--- a/.shellcheckrc
+++ b/.shellcheckrc
@@ -2,7 +2,8 @@ shell=bash
 enable=all
 color=auto
 severity=style
-disable=SC2030,SC2031,SC2154,SC2312,SC2329
+disable=SC2312
 external-sources=true
 check-sourced=true
+source-path=SCRIPTDIR
 wiki-link-count=5
